--- a/trainings/instant-insights/style.css
+++ b/trainings/instant-insights/style.css
@@ -32,32 +32,51 @@ body {
 
 .header {
   background-color: #13294b;
-  padding: 1.5rem 0;
-  border-bottom: 1px solid #e5e7eb;
+  height: 15vh; 
+  display: flex;      
+  align-items: center; 
+  padding: 0 2rem;      
+  box-sizing: border-box;
 }
 
 .header .container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-between; 
+  align-items: center;     
+  width: 100%;
 }
 
 .logo {
-  font-size: 1.8rem;
+  position: relative;
+  display: inline-block;
+  font-family: Georgia, "Times New Roman", serif;
+  font-size: 2rem;
   font-weight: 600;
   color: #ffffff;
+  margin: 0;
+  text-align: left;
+}
+
+.logo::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 0;
+  width: 45px;
+  height: 2px; 
+  background-color: #ff5f0f;
 }
 
 .main {
-  padding: 4rem 0;
+  padding: 2.2rem 0;
 }
 
 .hero {
-  margin-bottom: 4rem;
+  margin-bottom: 2.5rem;
 }
 
 .hero-title {
-  font-size: 3rem;
+  font-size: 2.7rem;
   font-weight: 700;
   color: #13294b;
   margin-bottom: 1rem;
