--- a/apps/holiday-card/styles.css
+++ b/apps/holiday-card/styles.css
@@ -289,6 +289,10 @@ font-size:14px;
 font-family:'Montserrat',sans-serif;
 }
 
+.sig-img {
+  margin-top: 24px;
+}
+
 .inside-right{
 display:flex;
 justify-content:flex-end;
